--- a/this-or-that.css
+++ b/this-or-that.css
@@ -14,7 +14,12 @@ ul  {
 }
 
 
+.contest-row {
 
+    width:100%;
+  /*  height: 300px;  */
+
+}
 
 .entry {
 
@@ -27,20 +32,27 @@ ul  {
    /* width: 1028px;
     height: 800px; */
    
-    margin: 0 auto;
-    display: inline-block;
+   height:800px;
+   width:1000px;
 
+   
+    display: inline-block;
+  transform: scale(.3);
+  transform-origin: 0 0;
    
     border: none;
     pointer-events: none;
+ 
+ /*
     -webkit-transform: scale(0.2);
     -moz-transform: scale(0.2);
     -ms-transform: scale(0.2);
-    transform: scale(1.9);
+    transform: scale(1.0);
     -webkit-transform-origin: 0 0;
     -moz-transform-origin: 0 0;
     -ms-transform-origin: 0 0;
-    transform-origin: 0 0;
+    transform-origin: 0 0;  */
+
 }
 
 
