--- a/this-or-that.css
+++ b/this-or-that.css
@@ -18,7 +18,10 @@ li {  padding-bottom: 20px;}
 table { width: 100%;}
 
 
-td {width: 810px;}
+td {width: 810px;
+	float: left;
+
+}
 
 .site_preview {width: 50%;}
 
