Changed templating/css for home page display of templates added display of username next to each contest view

--- a/this-or-that.css
+++ b/this-or-that.css
@@ -17,6 +17,9 @@
 
     width: 1200px;
 	display: block;
+  height: auto;
+  overflow: auto;
+
 }
 
 .btn {
@@ -27,7 +30,19 @@
 		
 }
 
- 
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+  min-height: 100%;
+  background: white;
+}
+
+ .submittedBy {
+
+   
+   max-height:20px;
+    text-align: left;
+ }
 
 
 
