--- a/this-or-that.css
+++ b/this-or-that.css
@@ -16,11 +16,14 @@
 	
 }
 .contest-row {
-
+margin:30px 0 30px 15px;
     width: 1200px;
 	display: block;
   height: auto;
   overflow: auto;
+  border-radius: 30px;
+  border: 2px solid #8AC007;
+
 
 }
 
@@ -41,7 +44,7 @@
 
  .submittedBy {
 
-   
+   padding:5px 0 0 10px;
    max-height:20px;
     text-align: left;
  }
@@ -143,6 +146,7 @@
   border: 1px solid transparent;
   font-size: 16px;
 }
+
 #cssmenu li.active {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
