--- a/this-or-that.css
+++ b/this-or-that.css
@@ -4,8 +4,17 @@
 
 
 
+body {
 
+  background: #c9d8c5;
+}
 
+h1 {
+  color: black;
+
+}
+
+.login-buttons { color: black;}
 .entry {
 	
 	width:500px;
@@ -22,7 +31,7 @@ margin:30px 0 30px 15px;
   height: auto;
   overflow: auto;
   border-radius: 30px;
-  border: 2px solid #8AC007;
+  border: 2px solid #09093B;
 
 
 }
@@ -39,7 +48,8 @@ margin:30px 0 30px 15px;
   max-width: 1200px;
   margin: 0 auto;
   min-height: 100%;
-  background: white;
+  background:  #c9d8c5
+
 }
 
  .submittedBy {
@@ -104,13 +114,21 @@ margin:30px 0 30px 15px;
 }
 #cssmenu ul {
   zoom: 1;
-  background: #36b0b6;
+  /*
+  background: #36b0b6;  
+  */
+
+  background: #7d4627;
+ 
+  /*
   background: -moz-linear-gradient(top, #36b0b6 0%, #2a8a8f 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #36b0b6), color-stop(100%, #2a8a8f));
   background: -webkit-linear-gradient(top, #36b0b6 0%, #2a8a8f 100%);
   background: -o-linear-gradient(top, #36b0b6 0%, #2a8a8f 100%);
   background: -ms-linear-gradient(top, #36b0b6 0%, #2a8a8f 100%);
   background: linear-gradient(top, #36b0b6 0%, #2a8a8f 100%);
+  */
+
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@top-color', endColorstr='@bottom-color', GradientType=0);
   padding: 5px 10px;
   -webkit-border-radius: 5px;
