--- a/this-or-that.css
+++ b/this-or-that.css
@@ -36,6 +36,7 @@ margin:30px 0 30px 15px;
 
 }
 
+
 .btn {
 		margin: auto;
 		
@@ -89,7 +90,18 @@ margin:30px 0 30px 15px;
 
 }
 
+.userContestControls ul {
 
+   list-style-type: none;
+}
+
+ .userContestControlButton {
+  margin: 5px 0 5px 15px;
+  background: #a8b6bf;
+  border-radius:5px;
+font-size:1.1em;
+
+}
 /* CSS menu styles */
 
 /* Base Styles */
