--- a/this-or-that.css
+++ b/this-or-that.css
@@ -90,9 +90,22 @@ margin:30px 0 30px 15px;
 
 }
 
+.userContestInfo li {
+
+margin: 10px 5px 10px 5px;
+padding-left:5px;
+
+}
 .userContestControls ul {
 
    list-style-type: none;
+
+
+}
+.userContestControls {
+
+   margin-left: 5px;
+
 }
 
  .userContestControlButton_Pause {
