--- a/this-or-that.css
+++ b/this-or-that.css
@@ -225,7 +225,8 @@ font-size:1.1em;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
   border-radius: 5px;
-  border: 1px solid #36b0b6;
+  /* border: 1px solid #36b0b6; */
+ border: 1px solid #a8b6bf;
 }
 #cssmenu li:hover a {
   -webkit-border-radius: 5px;
@@ -234,11 +235,13 @@ font-size:1.1em;
   -o-border-radius: 5px;
   border-radius: 5px;
   display: block;
-  background: #1e6468;
-  border: 1px solid #133e40;
+  /*background: #1e6468; */
+  background: #a8b6bf;
+  /*border: 1px solid #133e40; */
+  border: 1px solid #a8b6bf;
   -moz-box-shadow: inset 0 5px 10px #133e40;
   -webkit-box-shadow: inset 0 5px 10px #133e40;
-  box-shadow: inset 0 5px 10px #133e40;
+  box-shadow: inset 0 5px 10px #a8b6bf;
 }
 
 
