--- a/this-or-that.css
+++ b/this-or-that.css
@@ -75,7 +75,7 @@ margin:30px 0 30px 15px;
   max-width: 1200px;
   margin: 0 auto;
   min-height: 100%;
-  background:  #f9f9f9
+  background:  transparent;
 
 }
 
@@ -221,4 +221,81 @@ font-size:1.1em;
 
 .sub-container{
   padding: 5px 8px;
+}
+
+.add-content-box .add-content-area{
+    width: 70%;
+    position: relative;
+    display: block;
+    margin: 0px auto;
+    background: transparent;
+    -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    -moz-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    padding: 20px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    background-clip: padding-box;
+    background-color: #fff;
+}
+
+.add-content-box .add-content-area .main-title{
+  text-align: center;
+  margin: 3px 0px;
+}
+
+.add-content-box .add-content-area .sub-title{
+  text-align: center;
+  color: #757575;
+}
+
+.add-contest-form .item-block {
+    margin-bottom: 20px;
+    box-sizing: inherit;
+    font-family: "Lato", sans-serif;
+    font-size: 15px;
+    line-height: 1.5;
+}
+
+.add-contest-form .item-block .input-block {
+    width: 100%;
+    margin-left: 0;
+    box-sizing: border-box;
+    position: relative;
+    margin-top: 1rem;
+}
+
+.add-contest-form .item-block .input-block input[type=text],
+.add-contest-form .item-block .input-block textarea {
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #9e9e9e;
+    outline: none;
+    height: 3rem;
+    width: 100%;
+    font-size: 1rem;
+    margin: 0 0 15px 0;
+    padding: 0;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -o-transition: 0.3s;
+    -ms-transition: 0.3s;
+    transition: 0.3s;
+}
+
+.add-contest-form .item-block .input-block textarea{
+  height: 120px;
+}
+
+.add-contest-form .item-block .input-block input[type=text]:focus,
+.add-contest-form .item-block .input-block textarea:focus{
+  border-bottom-color: #2196f3;
+  box-shadow: 0 1px 0 0 #2196f3;
 }
