--- a/this-or-that.css
+++ b/this-or-that.css
@@ -18,7 +18,7 @@ h1 {
   color: black;
   right: 10px;
   position: absolute;
-  top: 7px;
+  top: 11px;
   font-size: 18px;
   width: 255px;  
 }
@@ -50,16 +50,28 @@ h1 {
 	
 }
 .contest-row {
-margin:30px 0 30px 15px;
-    width: 1200px;
+  margin:30px 0 30px 15px;
+  width: 1200px;
 	display: block;
   /* height: auto; */
   height: 600px;
   overflow: auto;
   border-radius: 30px;
-  border: 2px solid #09093B;
 
-
+  position: relative;
+  display: block;
+  margin: 0px auto;
+  background: transparent;
+  -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+  -moz-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+  padding: 20px 20px 0px 20px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  background-clip: padding-box;
+  background-color: #fff;
+  margin-bottom: 15px;
 }
 
 
@@ -72,7 +84,6 @@ margin:30px 0 30px 15px;
 }
 
 .container {
-  max-width: 1200px;
   margin: 0 auto;
   min-height: 100%;
   background:  transparent;
@@ -107,36 +118,52 @@ margin:30px 0 30px 15px;
 }
 
 .userContestInfo li {
-
-margin: 10px 5px 10px 5px;
-padding-left:5px;
-
+  margin: 10px 5px 10px 5px;
+  padding-left:5px;
 }
+
+.userContestStatus{
+  text-indent: 10px;
+}
+
 .userContestControls ul {
-
-   list-style-type: none;
-
-
+  list-style-type: none;
+  -webkit-margin-before: 0;
+  -webkit-margin-after: 0;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+  -webkit-padding-start: 0px;
 }
 .userContestControls {
-
-   margin-left: 5px;
-
+  width: 140px;
+  height: auto;
+  max-height: 500px;
+  float: left;
+  margin-top: 20px;
 }
 
- .userContestControlButton_Pause {
-  margin: 5px 0 5px 15px;
-  background: #a8b6bf;
-  border-radius:5px;
-font-size:1.1em;
-
-}
-.userContestControlButton_Delete {
-  margin: 5px 0 5px 15px;
-  background: #a8b6bf;
-  border-radius:5px;
-font-size:1.1em;
-
+ .userContestControlButton_Pause, .userContestControlButton_Delete {
+    background-color: #e1e1e1;
+    position: relative;
+    cursor: pointer;
+    will-change: opacity, transform;
+    -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    -ms-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    background-clip: padding-box;
+    border: none;
+    webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    -moz-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    padding: 10px 25px;
+    width: 120px;
+    margin-left: 15px;
+    margin-bottom: 15px;
 }
 
 /* CSS menu styles */
@@ -179,6 +206,7 @@ font-size:1.1em;
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;  
+  padding: 5px 0px;
 }
 #cssmenu li a {
 -webkit-transition: all 0.3s ease-in-out;
@@ -298,4 +326,116 @@ font-size:1.1em;
 .add-contest-form .item-block .input-block textarea:focus{
   border-bottom-color: #2196f3;
   box-shadow: 0 1px 0 0 #2196f3;
+}
+
+.add-contest-form .item-block .input-block .submit-action{
+  background-color: #e1e1e1;
+  position: relative;
+  cursor: pointer;
+  display: inline-block;
+  overflow: hidden;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  vertical-align: middle;
+  z-index: 1;
+  will-change: opacity, transform;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+  display: inline-block;
+  height: 36px;
+  margin-bottom: 15px;
+  padding: 0 2rem;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  background-clip: padding-box;
+  line-height: 36px;
+  text-transform: uppercase;
+  border: none;
+  outline: 0;
+  webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+  -moz-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+}
+
+.add-contest-form .item-block .input-block .submit-action:hover, 
+.alert.alert-warning.alert-dismissable button:hover, 
+.contest-row .btn button.vote1:hover,.contest-row button.vote2:hover,
+.userContestControlButton_Pause:hover, .userContestControlButton_Delete:hover {
+    -webkit-box-shadow: 0 5px 11px 0 rgba(0,0,0,0.18),0 4px 15px 0 rgba(0,0,0,0.15);
+    -moz-box-shadow: 0 5px 11px 0 rgba(0,0,0,0.18),0 4px 15px 0 rgba(0,0,0,0.15);
+    box-shadow: 0 5px 11px 0 rgba(0,0,0,0.18),0 4px 15px 0 rgba(0,0,0,0.15);
+}
+
+.alert.alert-warning.alert-dismissable{
+  margin: 10px;
+}
+
+.alert.alert-warning.alert-dismissable button{
+  background-color: #e1e1e1;
+  position: relative;
+  cursor: pointer;
+  display: inline-block;
+  overflow: hidden;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  vertical-align: middle;
+  z-index: 1;
+  will-change: opacity, transform;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+  display: inline-block;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  background-clip: padding-box;
+  text-transform: uppercase;
+  border: none;
+  outline: 0;
+  webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+  -moz-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+  margin: 4px 10px 10px 10px;
+  font-weight: bold;
+}
+
+.contest-row .btn button.vote1,.contest-row button.vote2{
+    background-color: #e1e1e1;
+    position: relative;
+    cursor: pointer;
+    will-change: opacity, transform;
+    -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    -ms-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    background-clip: padding-box;
+    border: none;
+    webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    -moz-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    padding: 10px 25px;
+}
+
+.user-contest-status-value{
+  color: #757575;
+}
+
+.sub-container .sub-container .contest-row{
+  width: 1100px;
 }
